[package]
name = "cavern-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
anyhow = "1.0"
